Mejora a la pagina web e implementacion de decorator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
-
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
+
+<p>TEXTO DE PRUEBA</p>
+<button (click)="fondo()">Cambiar color de fondo</button>
+<button (click)="letra()">Cambiar fuente</button>
+<button (click)="tamano()">Cambiar tamaño de la fuente</button>
+<button (click)="fondoYLetra()">Cambiar fondo y fuente</button>
+<button (click)="fondoYTamano()">Cambiar fondo y tamaño de la fuente</button>
+<button (click)="fondoTamanoYLetra()">Cambiar fondo, tamaño de la fuente y fuente</button>
+<button (click)="letraYTamano()">Cambiar fuente y tamaño de la fuente</button>
+<button (click)="reset()">Reiniciar</button>
