--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
+:root{
+    --primary-color: #3f51b5;
+    --font-color: Arial, sans-serif;
+    --font-size: 16px;
+}
+
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { 
+    margin: 0; 
+    color: var(--font-color)!important; 
+    font-size: var(--font-size)!important;
+    background-color: var(--primary-color)!important;
+}
